--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
         <img src="./resources/images/img-myt-logo.jpg" alt="My Times Logo.">
         <span>My Times</span>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">World</a></li>
-          <li><a href="#">U.S.</a></li>
-          <li><a href="#">Tech</a></li>
-          <li><a href="#">Science</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
     </header>
   </body>
 </html>
