--- a/index.html
+++ b/index.html
@@ -108,5 +108,20 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <div class="company">
+        <span class="coname">My Times</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+      <div class="copyright">
+        <span>&#169;, My Times (A Division of Codecademy bite)</span>
+      </div>
+    </footer>
   </body>
 </html>
